[project]
name = "wan-failover-check"
version = "0.1.0"
description = "WAN Failover Check"
readme = "README.md"
requires-python = ">=3.13"
service_name="WANFailoverCheck"
launch_path="wan_check.py"
dependencies = [
    "fastapi>=0.135.2",
    "flask>=3.1.3",
    "requests>=2.33.0",
    "uvicorn>=0.42.0",
]
